--- a/Paginas/PropuestaInstiucioanl.html
+++ b/Paginas/PropuestaInstiucioanl.html
@@ -33,7 +33,7 @@
   <!--Fin barra de NAVEGACION-->
 
   <div class="Todoproma">
-        <h2 class="tituloProMaTRI"><center>REFORZAMIENO VERANO </center></h2>
+        <h2 class="tituloProMaTRI"><center>REFORZAMIENTO VERANO </center></h2>
           <br> <br>
       <div class="todolistaopciones">
         <div class="listacursos">
